# teb

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
src/: array.rs  cell.rs  formatted_scalar.rs  lib.rs  main.rs  parse.rs  spreadsheet.rs  stack.rs  table.rs  util.rs  vm.rs
tests/: suite.txt  tests.rs
